--- a/sidebar.html
+++ b/sidebar.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 
-<html>
-  <head>
+<html lang="en">
+<head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="panel.css"/>
-  </head>
+    <meta name="color-scheme" content="dark light">
+    <link rel="stylesheet" href="sidebar.css">
+    <script src="sidebar.js"></script>
+</head>
 
 <body>
- <h1>My panel</h1>
+    <div>
+    <p id="response"></p>
+    </div>
 </body>
 
 </html>
