--- a/sidebar.html
+++ b/sidebar.html
@@ -9,9 +9,8 @@
 </head>
 
 <body>
-    <div>
-    <p id="response"></p>
-    </div>
+    <div id="response"></div>
+    <script type="text/javascript" src="drawdown.js"></script>
 </body>
 
 </html>
